[package]
name = "cuddly-sniffle"
version = "0.1.0"
authors = ["Armand-Cezar Mathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# synchronization primitives
parking_lot = "0.11"

[dependencies.crossbeam]
version  = "0.8"
features = ["crossbeam-channel"]
optional = true

[features]
default = []

async = ["crossbeam/crossbeam-channel"]
