[package]
name        = "qrwcell"
version     = "0.1.0"
authors     = ["Armand-Cezar Mathe <me@cezarmathe.com>"]
edition     = "2018"
description = "Read-write cell that aims to reduce the amount of blocking compared to a single read-write lock."
readme      = "README.md"
license     = "MIT"
homepage    = "https://github.com/cezarmathe/qrwcell"
repository  = "https://github.com/cezarmathe/qrwcell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# synchronization primitives
parking_lot = "0.11"
